# tjuptattendance

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPERS.md  Makefile  README.md  _config.yml  config_template.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  clippy_check.yml  release.yml  release_pub.yml
cfwas/: README.md
common/: Cargo.toml
common/src/: douban.rs  error.rs  lib.rs  time.rs  user.rs
doubandataserver/: Cargo.toml
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs
src/: attbot.rs  attimpl.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  user.rs  util.rs
src/util/: doubandata.rs
tests/: tests.rs
tjupt_models/: Cargo.toml
tjupt_models/src/: lib.rs  user.rs
tjuptop/: Cargo.toml  build.rs
tjuptop/src/: bot.rs  error.rs  lib.rs  user.rs
tjuptop/src/api/: doubanapi.rs  mod.rs  myapi.rs
tjuptop/tests/: integration.rs
util/: Cargo.toml
util/src/: error.rs  lib.rs
util/src/model/: answer.rs  doubandata.rs  mod.rs  poster.rs
util/tests/: common.rs  tests.rs
