[package]
name = "tjuptatt"
version = "1.1.6"
edition = "2021"
description = "TJUPT 签到工具，支持TOP10签到"
documentation = "https://github.com/azureqaq/tjuptattendance"
homepage = "https://github.com/azureqaq/tjuptattendance"
repository = "https://github.com/azureqaq/tjuptattendance"
default-run = "tjuptatt"
readme = "README.md"
authors = ["AzureQAQ <azureqaq@gmail.com>"]
license = "MIT"
keywords = ["cli", "bin"]
categories = ["command-line-utilities"]
build =  "build.rs"
autotests = false


[[test]]
name = "integration"
path = "tests/tests.rs"


[dependencies]
anyhow = "1.0"
clap = { version = "4.1.6", features = ["derive"] }
thiserror = "1.0"


[dependencies.tokio]
version = "1.21"
default-features = false
features = [
    "rt-multi-thread", "macros", "parking_lot"
]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio-test = "*"
tempdir = "0.3"

[build-dependencies]
embed-resource =  "1"
