[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
reqwest = { version = "0", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std", "serde"]

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
tempdir = "0.3"
