[package]
name = "doubandataserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
thiserror = "1.0"

[dependencies.tokio]
version = "1.26"
default-features = false
features = [
    "rt-multi-thread", "macros", "parking_lot"
]

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"
tempdir = "0.3"

[build-dependencies]
embed-resource =  "1"
