[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0"
util = { path = "../util" }


[dependencies.tokio]
version = "1"
default-features = false
features = [
    "rt-multi-thread", "macros", "parking_lot"
]

[dependencies.axum]
version = "0.6"
default-features = false
features = [
    "matched-path", "original-uri", "tokio", "http2", "http1", "query"
]
