[package]
name = "tjuptop"
version = "1.1.6"
edition = "2021"
description = "TJUPT 签到工具，支持TOP10签到"
documentation = "https://github.com/azureqaq/tjuptattendance"
homepage = "https://github.com/azureqaq/tjuptattendance"
repository = "https://github.com/azureqaq/tjuptattendance"
readme = "README.md"
authors = ["AzureQAQ <azureqaq@gmail.com>"]
license = "MIT"
keywords = ["cli", "bin", "tjupt"]
categories = ["command-line-utilities"]
build =  "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0"


[dependencies.tokio]
version = "1"
default-features = false
features = [
    "rt-multi-thread", "macros", "parking_lot"
]

[dev-dependencies]
pretty_assertions = "1"


[build-dependencies]
embed-resource =  "1"

