[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json"]}
lazy_static = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }


[dev-dependencies]
pretty_assertions = "1"

[dev-dependencies.tokio]
version = "1"
default-features = false
features = [
    "rt-multi-thread", "macros", "parking_lot"
]
